Updated copy throughout the entire website.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from '../components/Icon.astro';
 ---
-<footer class="bg-black text-white py-14 mt-16">
+<footer class="bg-black text-white py-14">
   <div class="container-reignite grid gap-10 md:grid-cols-4">
     
     <!-- Column 1: Brand -->
